--- a/03.Arrays/04.ReverseArrayOfStrings/P04.ReverseArrayOfStrings.csproj
+++ b/03.Arrays/04.ReverseArrayOfStrings/P04.ReverseArrayOfStrings.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net6.0</TargetFramework>
-    <RootNamespace>_04.ReverseArrayOfStrings</RootNamespace>
+    <RootNamespace>P04.ReverseArrayOfStrings</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
   </PropertyGroup>
